# ayllu-iot

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: pytest.yml  toxCI.yml
aylluiot/: app.py  core.py  devices.py
aylluiot/aws/: service.py  thing.py
aylluiot/utils/: data_utils.py  devices.py  path.py  path_utils.py
config/: aws_config.json  cardano_config.json  config_file.json
docker/: cardano_Dockerfile  privtnet_Dockerfile  privtnet_repo_Dockerfile  service_Dockerfile
docs/: NodeClass_usage.md  README.md  aws_service.py  keysClass_usage.md
priv/transactions/: tx.draft  tx.signed  tx_metadata.json
priv/wallets/3multisig/: 3multisig.script  3multisig.script.addr
priv/wallets/ForMinting/: ForMinting.base.addr  ForMinting.json  ForMinting.payment.addr  ForMinting.payment.evkey  ForMinting.payment.skey  ForMinting.payment.vkey  ForMinting.policyid  ForMinting.script  ForMinting.stake.addr  ForMinting.stake.evkey  ForMinting.stake.skey  ForMinting.stake.vkey
priv/wallets/ForMinting1/: ForMinting1.payment.skey  ForMinting1.payment.vkey
priv/wallets/MasterGetFair/: MasterGetFair.base.addr  MasterGetFair.json  (+8 more)
service/: cardanoiot.service
src/: app.py  conftest.py
src/cardano/: base.py  multisig.py  node_lib.py  utils.py
src/iot/: awspubsub.py  commands.py  core.py  devices.py  test.py
src/utils/: data_utils.py  path_utils.py  test_utils.py
tests/: extended_devices.py  test_core.py  test_data_utils.py  test_devices.py  test_path_utils.py  test_utils.py
(+46 files in other folders)
